--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 <h1>Video Production!!</h1>
+<h1>Video Production!!</h1>
 <h1>Welcome to Lance's Headshots Austin!</h1>
 <h1>Welcome to Lance's Headshots Austin!</h1>
 <br>
