--- a/index.html
+++ b/index.html
@@ -1,22 +1,161 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
 <head>
-	<link rel="stylesheet" type="text/css" href="style0004.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <meta http-equiv="refresh" content="50"> -->
+  <meta name="Description" content="Headshots">
+  <meta name="keywords" content="Headshots, head, shots, photo, photography, portrait, studio, profile, face, branding, model, modeling, retouching">
+  <meta name="author" content="Lance Seymour">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" type="text/css" href="style0001.css">
+  <title>Seymour MultiMedia</title>
 </head>
 
+<!-- Body -->
+
+<!-- Navigation -->
+<!-- ___________________________________________ -->
+<!-- Navigation -->
+
 <body>
-<h1>Video Production!!</h1>
-<h1>Video Production!!</h1>
-<h1>Welcome to Lance's Headshots Austin!</h1>
-<h1>Welcome to Lance's Headshots Austin!</h1>
-<br>
+  <div class="main-nav mobile-collapse">
+    <nav>
+    <a href="#home"><img class="logo-img" src="img/logo.png"></a>
+      <ul>
+        <!-- <li><a href="#">Home</a></li> -->
+        <li><a href="#reel">Reel</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
+  <!-- \/ Outside the Nav div class of main-nav -->
 
-<!--When you zoom all the way in in Firefox browswer, the pic will change: example below-->
-<p>When you zoom all the way in in Firefox browswer, the pic will change: example below</p>
+  <section class="top-container" id="home">
+    <header class="showcase-img">
+      <h1>Video Production</h1>
+      <h2>Services</h2>
+      <p>Commercial • Event • Wedding • Promo • Real Estate • Drone</p>
+    </header>
+  </section>
+
+
+ <!-- Moving images -->
+ <!-- ___________________________________________ -->
+ <!-- Moving images -->
+
+  <div id="pcontainer">
+    <div class="movingimages">
+      <!-- 19 photos total, only 11 though without repeats -->
+      <!-- <h4>Moving image in this area</h4> -->
+      <img class="first" src="img/IMG_4517.JPG" style="width: 270px;height: 200px;"
+      >
+      <img src="img/IMG_0623.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0585.JPG" style="width: 270px;height: 200px;">
+      <img src="img/_MG_0160.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0572.JPG" style="width: 270px;height: 200px;">
+      <img src="img/_MG_0165.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0561.JPG" class="rotateimg180" style="width: 270px;height: 200px;">
+      <img src="img/2013-12-03HDR.jpg" style="width: 270px;height: 200px;">
+      <!-- Additional photos that are not repeated -->
+      <img src="img/2013-11-06.jpg" style="width: 270px;height: 200px;">
+      <img src="img/2013-12-03HDR1.jpg" style="width: 270px;height: 200px;">
+      <img src="img/2013-11-15HDR2.jpg" style="width: 270px;height: 200px;">
+
+      <!--  REPEAT OF THE FIRST PHOTOS AGAIN -->
+      <img src="img/IMG_4517.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0623.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0585.JPG" style="width: 270px;height: 200px;">
+      <img src="img/_MG_0160.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0572.JPG" style="width: 270px;height: 200px;">
+      <img src="img/_MG_0165.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0561.JPG" class="rotateimg180" style="width: 270px;height: 200px;">
+      <img src="img/2013-12-03HDR.jpg" style="width: 270px;height: 200px;">
+    </div>
+  </div>
+
+  <!-- Reels -->
+  <!-- ___________________________________________ -->
+  <!-- Reels -->
+
+  <div class="reels" id="reel">
+    <h4>CINEMATOGRAPHY REEL</h4>
+    <iframe class="CinReel" width="560" height="315" src="https://www.youtube.com/embed/wEG1rwkyIkY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <h4>EDITING REEL</h4>
+    <iframe class="EdiReel" width="560" height="315" src="https://www.youtube.com/embed/qfi8q3doSIQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
+
+<!-- Work Samples -->
+<!-- ___________________________________________ -->
+<!-- Work Samples -->
+
+  <div class="worksamples">
+    <!-- <h2>Work Samples</h2> -->
+    <h2>Work Samples</h2>
+    <h4>Cinematography & Editing Work Samples</h4>
+    <div class="worksamples1">
+      <iframe width="260" height="146" align="center" src="https://www.youtube.com/embed/K0r-aNMtVHQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="260" height="146" align="center" src="https://www.youtube.com/embed/842sItxJIqk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="260" height="146" align="center" src="https://www.youtube.com/embed/BAI8ttqJ3es" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="260" height="146" align="center" src="https://www.youtube.com/embed/hlWkG6fEaJU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+    <h4>Cinematography Work Samples</h4>
+    <div class="worksamples2">
+      <iframe width="260" height="146" align="center" src="https://player.vimeo.com/video/135067735" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      
+    </div>
+    <h4>Editing Work Samples</h4>
+    <div class="worksamples3">
+      <iframe width="260" height="146" align="center" src="https://www.youtube.com/embed/41KZEXc9hiw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="260" height="146" align="center" src="https://www.youtube.com/embed/q2CVKF3HeYQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      
+    </div>
+    <!-- <h4>Please email for links to work samples</h4> -->
+  </div>
+
+  <!-- Services -->
+  <!-- ___________________________________________ -->
+  <!-- Services -->
+
+  <div class="services" id="services">
+    <h2>Services</h2>
+    <h4>Event, Wedding, Corportate, Commercial, Film, Interview, Music Video, Real Estate, etc.</h4>
+    <br/>
+    <h4>Please email for quotes:</h4>
+    <h4>SeymourMultiMedia@gmail.com</h4>
+  </div>
+
+  <div class="about" id="about">
+    <h2>About</h2>
+    <h4>The owner, Lance Seymour, graduated from UT and has been working on various films and video projects since 2011. SeymourMultiMedia is a local Austin, TX business creating vidoes for a variety of clients and individuals.</h4>
+    <br/>
+    <h4>Whether it's a commercial, documentry, corporate, feature film, web-series, the goal is always the same: tell the best and most compelling story possible.</h4>
+    <br/>
+    <h4>Previous jobs Lance has worked in the entertainment industry consist of: Camera Assistant, Production Assistant, and Digital Image Technician.</h4>
+  </div>
+
+  <div class="contact" id="contact">
+    <h2>Contact</h2>
+    <h4>Lance Seymour</h4>
+    <h4>SeymourMultiMedia@gmail.com</h4>
+    <h4>512.799.5708</h4>
+  </div>
+
+
+  <!-- Footer -->
+  <!-- ___________________________________________ -->
+  <!-- Footer -->
+
+  <footer>
+    <p class="Footcontact">SeymourMultiMedia@gmail.com • 512.799.5708</p>
+    <p>Owned and operated By Seymour Multi Media, LLC &copy; 2018</p>
+  </footer>
 
 </body>
 
 
-</body>
 </html>
