--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       >
       <img src="img/IMG_0623.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0585.JPG" style="width: 270px;height: 200px;">
-      <img src="img/_MG_0160.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0160.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0572.JPG" style="width: 270px;height: 200px;">
-      <img src="img/_MG_0165.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0165.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0561.JPG" class="rotateimg180" style="width: 270px;height: 200px;">
       <img src="img/2013-12-03HDR.jpg" style="width: 270px;height: 200px;">
       <!-- Additional photos that are not repeated -->
@@ -70,9 +70,9 @@
       <img src="img/IMG_4517.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0623.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0585.JPG" style="width: 270px;height: 200px;">
-      <img src="img/_MG_0160.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0160.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0572.JPG" style="width: 270px;height: 200px;">
-      <img src="img/_MG_0165.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0165.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0561.JPG" class="rotateimg180" style="width: 270px;height: 200px;">
       <img src="img/2013-12-03HDR.jpg" style="width: 270px;height: 200px;">
     </div>
