--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- <h4>Moving image in this area</h4> -->
       <img class="first" src="img/IMG_4517.JPG" style="width: 270px;height: 200px;"
       >
-      <img src="img/IMG_0623.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0623.jpg" style="width: 270px;height: 200px;">
       <img src="img/IMG_0585.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0160.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0572.JPG" style="width: 270px;height: 200px;">
@@ -68,7 +68,7 @@
 
       <!--  REPEAT OF THE FIRST PHOTOS AGAIN -->
       <img src="img/IMG_4517.JPG" style="width: 270px;height: 200px;">
-      <img src="img/IMG_0623.JPG" style="width: 270px;height: 200px;">
+      <img src="img/IMG_0623.jpg" style="width: 270px;height: 200px;">
       <img src="img/IMG_0585.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0160.JPG" style="width: 270px;height: 200px;">
       <img src="img/IMG_0572.JPG" style="width: 270px;height: 200px;">
