--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
     <h2>About</h2>
     <h4>The owner, Lance Seymour, graduated from UT and has been working on various films and video projects since 2011. SeymourMultiMedia is a local Austin, TX business creating vidoes for a variety of clients and individuals.</h4>
     <br/>
-    <h4>Whether it's a commercial, documentry, corporate, feature film, web-series, the goal is always the same: tell the best and most compelling story possible.</h4>
+    <h4>Whether it's a commercial, documentry, corporate, product, feature film, web-series, the goal is always the same:</h4>
+     <h4>Tell the best and most compelling story possible.</h4>
     <br/>
     <h4>Previous jobs Lance has worked in the entertainment industry consist of: Camera Assistant, Production Assistant, and Digital Image Technician.</h4>
   </div>
