--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- <meta http-equiv="refresh" content="50"> -->
-  <meta name="Description" content="Headshots">
-  <meta name="keywords" content="Headshots, head, shots, photo, photography, portrait, studio, profile, face, branding, model, modeling, retouching">
+  <meta name="Description" content="Video Production Services">
+  <meta name="keywords" content="Video, Production, Film, studio, profile, face, branding, model, modeling, retouching">
   <meta name="author" content="Lance Seymour">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous">
   </script>
@@ -39,7 +39,7 @@
     <header class="showcase-img">
       <h1>Video Production</h1>
       <h2>Services</h2>
-      <p>Commercial • Event • Wedding • Promo • Real Estate • Drone</p>
+      <p>Corporate • Event • Wedding • Promo • Real Estate • Drone</p>
     </header>
   </section>
 
@@ -123,11 +123,16 @@
 
   <div class="services" id="services">
     <h2>Services</h2>
-    <h4>Event, Wedding, Corportate, Commercial, Film, Interview, Music Video, Real Estate, etc.</h4>
+    <h4>Event, Wedding, Film, Interview, Music Video, Real Estate</h4>
+    <h4>Corportate Profile, Online Commercial, Industrial, Promotional</h4>
+    <h4>Customer Testimonial, Internal Communication, Staff Training</h4>
+    <h4>Talent Recruitment, Event Documentation, Conference & Seminars, etc.</h4>
     <br/>
     <h4>Please email for quotes:</h4>
     <h4>SeymourMultiMedia@gmail.com</h4>
   </div>
+
+  <!-- About -->
 
   <div class="about" id="about">
     <h2>About</h2>
@@ -138,6 +143,8 @@
     <br/>
     <h4>Previous jobs Lance has worked in the entertainment industry consist of: Camera Assistant, Production Assistant, and Digital Image Technician.</h4>
   </div>
+
+   <!-- Contact -->
 
   <div class="contact" id="contact">
     <h2>Contact</h2>
