--- a/index.html
+++ b/index.html
@@ -133,15 +133,20 @@
   </div>
 
   <!-- About -->
-
+  <h2 class="abouttitle">About</h2>
   <div class="about" id="about">
-    <h2>About</h2>
-    <h4>The owner, Lance Seymour, graduated from UT and has been working on various films and video projects since 2011. SeymourMultiMedia is a local Austin, TX business creating vidoes for a variety of clients and individuals.</h4>
-    <br/>
+    <div class="aboutd2">
+    	<img src="img/IMG_06231.jpg" style="width: 210px;height: 300px;">
+    </div>
+    <div class="aboutd3">
+    	<br/>
+    	<h4>SeymourMultiMedia is a local Austin, TX business creating vidoes for a variety of clients and individuals.</h4>
     <h4>Whether it's a commercial, documentry, corporate, product, feature film, web-series, the goal is always the same:</h4>
      <h4>Tell the best and most compelling story possible.</h4>
     <br/>
+     <h4>The owner, Lance Seymour, graduated from UT and has been working on various films and video projects since 2011.</h4>
     <h4>Previous jobs Lance has worked in the entertainment industry consist of: Camera Assistant, Production Assistant, and Digital Image Technician.</h4>
+    </div>
   </div>
 
    <!-- Contact -->
