--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <h2 class="abouttitle">About</h2>
   <div class="about" id="about">
     <div class="aboutd2">
-    	<img src="img/IMG_06231.jpg" style="width: 210px;height: 300px;">
+    	<img src="img/IMG_06231.JPG" style="width: 210px;height: 300px;">
     </div>
     <div class="aboutd3">
     	<br/>
